fix: update .gitignore, add cropperjs dependency, and enhance localization for cropping tool

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -15,12 +15,13 @@
 ::-webkit-scrollbar {
   background-color: transparent;
   width: 8px;
+  height: 8px;
 }
 ::-webkit-scrollbar-track {
-  background-color: rgb(3 7 18);
+  background-color: rgba(3, 7, 18, 0.8);
 }
 ::-webkit-scrollbar-thumb {
-  background-color: rgb(107 114 128);
+  background-color: rgb(107, 114, 128, 0.8);
   /* border-radius: 5px; */
 }
 
